tests/fixtures/invalid/bad-escaping-1.yini
@yini

^ App
name = "Nebula Server"

// Strings are raw by default, backslashes are used as-is.
dataDir = "C:\data\nebula"

^ Logging
file = c"C:\logs\nebula\app.log"	// INCORRECT! Use of escapes!

// C-strings enable the use of escapes.
welcomeMessage = c"Server started at:\nReady for connections."

level = "info"
